# rustr

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs  repository.rs
crypto/: Cargo.toml
crypto/src/: lib.rs
entity/: Cargo.toml
entity/src/: lib.rs
src/: main.rs
