[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
core = { path = "../core" }
entity = { path = "../entity" }
axum-macros = "0.3.7"
tower-http = { version = "0.4.0", features = ["add-extension", "trace"] }
tracing-subscriber = "0.3.16"
