[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.1.12", features = ["derive"] }
crypto = { path = "../crypto" }
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.94"
entity = { path = "../entity" }
reqwest = { version = "0.11.15", features = ["json", "blocking"] }
